fixed copy bottom align

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,7 @@
 
 .mantine-lriu2q {
     width: 80%;
+
 }
 .mantine-1q36a81 {
     padding: 0px;
@@ -17,8 +18,11 @@
 }
 .mantine-Accordion-control {
     padding: 2px;
-    padding-right: 10px;
+    padding-right: 5px;
 }
 .mantine-Accordion-chevron {
     margin-right: 2px;
+}
+.mantine-Accordion-content {
+    padding: 0px 5px 0px 5px;
 }
